一個簡單的範例頁面產生

--- a/myapp/public/stylesheets/style.css
+++ b/myapp/public/stylesheets/style.css
@@ -1,8 +1,21 @@
 body {
-  padding: 50px;
+  /*padding: 50px;*/
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+.header-bg{
+  background: url("http://placekitten.com/g/1024/300");
+  background-size: 100% 50%;
+  background-attachment: fixed;  
+  height: 400px;
+}
+.section{
+  padding-top: 110px;
+  padding-bottom: 110px;
+}
+.thumbnail > i{
+  font-size: 100px;
 }
