--- a/myapp/views/layout.jade
+++ b/myapp/views/layout.jade
@@ -7,33 +7,11 @@ html
     title= title
     link(href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    .header-bg
-      .section
-        .container
-          .row
-            h1.text-right.text-primary 嘿！歡迎你來到這裡
-    .header
-      nav.navbar.navbar-default.navbar-fixed-top
-        .container
-          .navbar-header
-            button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
-              span.sr-only Toggle navigation
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-            a.navbar-brand(href='#') MyPage
-          #bs-example-navbar-collapse-1.collapse.navbar-collapse
-            ul.nav.navbar-nav
-              li.active
-                a(href='#') About 
-                  span.sr-only (current)
-              li
-                a(href='#') Works
-    
+  body(data-spy="scroll" data-target="#navbar")
+    include header
     block content
-    .footer
-      .container
-        span.navbar-text.navbar-right © 2015. Bootstrap web view.
+    include footer
+
     script(src='https://code.jquery.com/jquery-1.11.3.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
+    script(src="/javascripts/main.js")
