--- a/myapp/views/index.jade
+++ b/myapp/views/index.jade
@@ -19,15 +19,15 @@ block content
     .container
       .row.text-center
         .col-md-4
-          spen.glyphicon.glyphicon-heart.img-circle
+          span.glyphicon.glyphicon-heart.img-circle
           h3 為什麼我喜歡程式
           h4.text-muted 我喜歡用程式來消磨我的時間，我很享受結果出來的那一個瞬間。
         .col-md-4
-          spen.glyphicon.glyphicon-music.img-circle
+          span.glyphicon.glyphicon-music.img-circle
           h3 為什麼我愛音樂
           h4.text-muted 他能讓我更加放鬆，聽著這些音符發出來的聲音能讓我沈澱一些事情。
         .col-md-4
-          spen.glyphicon.glyphicon-apple.img-circle
+          span.glyphicon.glyphicon-apple.img-circle
           h3 蘋果是一個好東西
           h4.text-muted 恩..我指的是” 一天一蘋果，醫生遠離我 “這句話。
   #skills.section.bg-info
